--- a/hscaffold.cabal
+++ b/hscaffold.cabal
@@ -24,6 +24,7 @@ library
     , mtl
     , directory
     , filepath
+    , unix
   exposed-modules:
       Hscaffold
   hs-source-dirs:
@@ -41,6 +42,7 @@ test-suite hspec
     , mtl
     , directory
     , filepath
+    , unix
     , hspec
     , hscaffold
     , QuickCheck
