--- a/hscaffold.cabal
+++ b/hscaffold.cabal
@@ -27,6 +27,8 @@ library
     , unix
   exposed-modules:
       Hscaffold
+  other-modules:
+      Paths_hscaffold
   hs-source-dirs:
       src
   default-language: Haskell2010
