--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ dependencies:
 - directory
 - filepath
 - unix
+- regex-compat
 
 library:
   exposed-modules: Hscaffold
@@ -35,3 +36,4 @@ tests:
     - hspec
     - hscaffold
     - QuickCheck
+    - temporary
