--- a/hscaffold.cabal
+++ b/hscaffold.cabal
@@ -42,6 +42,22 @@ library
       src
   default-language: Haskell2010
 
+executable hsfiles-from-directory
+  main-is: HsfilesFromDirectory.hs
+  hs-source-dirs:
+      bin
+  build-depends:
+      base >=4.8 && <4.9
+    , text
+    , mtl
+    , transformers
+    , directory
+    , filepath
+    , unix
+    , regex-compat
+    , hscaffold
+  default-language: Haskell2010
+
 test-suite hspec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
